# quiz_snippets_1

./: .gitignore  CMakeLists.txt  README.md
snippets/: snippet_0.cpp  snippet_1.cpp  snippet_2.cpp  snippet_4.cpp
snippets/snippet_3/: global.cppm  global.hpp  main.cpp  runme-clang.sh  runme-gcc.sh  runme.sh
